@@ -501,16 +501,21 @@ GEN
 ZM_lll_norms(GEN x, double DELTA, long flag, GEN *B)
 {
   pari_sp ltop = avma;
+  const long compat = flag & LLL_COMPATIBLE;
   const double ETA = 0.51;
   long p, n = lg(x)-1;
   GEN U;
   if (n <= 1) return lll_trivial(x, flag);
   x = RgM_shallowcopy(x);
   U = (flag & LLL_INPLACE)? NULL: matid(n);
-  for (p = LOWDEFAULTPREC; ; incrprec(p))
+  for (p = compat? DEFAULTPREC: LOWDEFAULTPREC;;)
   {
     GEN m = fplll(&x, &U, B, DELTA, ETA, flag, p);
     if (m) return m;
+    if (compat)
+      p += DEFAULTPREC-2;
+    else
+      incrprec(p);
     gerepileall(ltop, U? 2: 1, &x, &U);
   }
   return NULL; /* NOT REACHED */
