@@ -7,9 +7,9 @@ x^3 + (-309809053782*y^3 - 3888997223751*y^2 - 6797301518349*y - 84052574654
 290814942520335331064)
 2
 x^3 + (-1547417164685*y^3 + 31806432693392*y^2 - 139471604300434*y - 1773556
-14250444)*x + (-17339620993155536027731830465024620*y^3 + 222146972997079282
-836844633756882355*y^2 + 23768491929510661288125574428753608*y - 22611388601
-0159043440455818352510576)
+14250444)*x + (17339620993155536027731830465024620*y^3 - 2221469729970792828
+36844633756882355*y^2 - 23768491929510661288125574428753608*y + 226113886010
+159043440455818352510576)
 3
 x^5 + (31053694430691806959028153535526508575394491595530880075/229919*y^3 -
  1337172444910675702714834520768516136648811147052111368700/229919*y^2 - 184
@@ -21,15 +21,15 @@ x^5 + (31053694430691806959028153535526508575394491595530880075/229919*y^3 -
 0/229919*y^2 + 4908982791938024433088442608773791198363680014945006762419677
 7607385389691428594721475982079142722308089422533825/229919*y - 226026940013
 1374832457412095356272722509330921975907891179036715440913257809856987870817
-500825759225344497438991545/229919)*x + (-2255199835290196313164199304660151
-3394663826217606398903725413890899227063712884242626438284497228147046206609
-103759437051565982306045980/229919*y^3 + 97006910329158788781967916588803590
-9151345252505935302282775897412741076845647389608505947907268187014052431332
-516795716517046923205689040/229919*y^2 + 13457771646401501397953942901192727
-4555960078892474844346516700443750878660026665817652934687874444359027516754
-60471237318952656599936814270/229919*y - 61964032488405358950590506885400928
-8397033686882018631530560248209574721933493202557379352417753905284826954675
-702205305460016853411791162970/229919)
+500825759225344497438991545/229919)*x + (22551998352901963131641993046601513
+3946638262176063989037254138908992270637128842426264382844972281470462066091
+03759437051565982306045980/229919*y^3 - 970069103291587887819679165888035909
+1513452525059353022827758974127410768456473896085059479072681870140524313325
+16795716517046923205689040/229919*y^2 - 134577716464015013979539429011927274
+5559600788924748443465167004437508786600266658176529346878744443590275167546
+0471237318952656599936814270/229919*y + 619640324884053589505905068854009288
+3970336868820186315305602482095747219334932025573793524177539052848269546757
+02205305460016853411791162970/229919)
 4
 x^5 + 110*x^3 - 385*x^2 + (-6875*y + 13310)*x + (20625*y + 32197)
 5
@@ -64,14 +64,14 @@ x^5 + (677308732982301944730030845266716201702837696162187325328/5*y^3 + 481
 7651773558650909762864388498297831958827163349141150095186154867116600261791
 580542516653158613689676015829782898702530873665348851222173825666/5)
 8
-x^3 + (-2138833799099964*y - 77766538091057475)*x + (28996816968231072456572
-6*y + 10543044869724218021876124)
+x^3 + (-2138833799099964*y - 77766538091057475)*x + (-2899681696823107245657
+26*y - 10543044869724218021876124)
 9
-[x^3 + (-2138833799099964*y - 77766538091057475)*x + (2899681696823107245657
-26*y + 10543044869724218021876124), x^3 + (-2138833799099964*y - 77766538091
-057475)*x + (271454449233503516412931*y + 9869898621944137446807843), x^3 + 
-(-2138833799099964*y - 77766538091057475)*x + (18513720448807208152795*y + 6
-73146247780080575068281), x^3 - 3*x - 1]
+[x^3 + (-2138833799099964*y - 77766538091057475)*x + (-271454449233503516412
+931*y - 9869898621944137446807843), x^3 + (-2138833799099964*y - 77766538091
+057475)*x + (18513720448807208152795*y + 673146247780080575068281), x^3 + (-
+2138833799099964*y - 77766538091057475)*x + (-289968169682310724565726*y - 1
+0543044869724218021876124), x^3 - 3*x - 1]
 10
 x^5 - 10*x^3 + 20*x + 10
 11
@@ -130,4 +130,4 @@ x^3 + (29*y^3 - 156*y^2 - 403*y + 4767)*x + (-582335/6*y^3 + 840637/3*y^2 +
 20
 x^3 - 3*x - 1
 []
-Total time spent: 9665
+Total time spent: 10448
