@@ -1,133 +1,0 @@
-  ***   Warning: new stack size = 20000000 (19.073 Mbytes).
-1
-x^3 + (-309809053782*y^3 - 3888997223751*y^2 - 6797301518349*y - 84052574654
-07)*x + (2110598365387467792592554352717526002539781865920923249*y^3 + 21641
-216011110540424109369276995877123124719593450117617*y^2 - 112415300673959930
-84134917692441162658808857634880256897*y - 756749747169262373129861936919845
-290814942520335331064)
-2
-x^3 + (-1547417164685*y^3 + 31806432693392*y^2 - 139471604300434*y - 1773556
-14250444)*x + (17339620993155536027731830465024620*y^3 - 2221469729970792828
-36844633756882355*y^2 - 23768491929510661288125574428753608*y + 226113886010
-159043440455818352510576)
-3
-x^5 + (31053694430691806959028153535526508575394491595530880075/229919*y^3 -
- 1337172444910675702714834520768516136648811147052111368700/229919*y^2 - 184
-35607679719630233800003735429609306259420537202849365675/229919*y + 85168752
-1879977644810463044558307395052118113383799019741260/229919)*x^3 + (-8226341
-6915869106989395958531761781594352114542089475985382056823633565937770898673
-231009566363506250615631175/229919*y^3 + 35385478381530645798170469394211236
-5168282550917362433457634864372667449652003732800972194102687257779244625180
-0/229919*y^2 + 4908982791938024433088442608773791198363680014945006762419677
-7607385389691428594721475982079142722308089422533825/229919*y - 226026940013
-1374832457412095356272722509330921975907891179036715440913257809856987870817
-500825759225344497438991545/229919)*x + (22551998352901963131641993046601513
-3946638262176063989037254138908992270637128842426264382844972281470462066091
-03759437051565982306045980/229919*y^3 - 970069103291587887819679165888035909
-1513452525059353022827758974127410768456473896085059479072681870140524313325
-16795716517046923205689040/229919*y^2 - 134577716464015013979539429011927274
-5559600788924748443465167004437508786600266658176529346878744443590275167546
-0471237318952656599936814270/229919*y + 619640324884053589505905068854009288
-3970336868820186315305602482095747219334932025573793524177539052848269546757
-02205305460016853411791162970/229919)
-4
-x^5 + 110*x^3 - 385*x^2 + (-6875*y + 13310)*x + (20625*y + 32197)
-5
-x^5 + 1497313810*x^3 + 153069990594216277067332440*x^2 - 9993317827227414657
-08504771613701347765415*x - 421302153697978557238622899127897637801303537233
-83633556328
-6
-x^3 + (72*y^5 - 180*y^4 + 306*y^3 - 156*y^2 + 156*y + 132)*x + (144*y^5 - 36
-0*y^4 + 610*y^3 - 312*y^2 + 318*y + 250)
-7
-x^5 + (677308732982301944730030845266716201702837696162187325328/5*y^3 + 481
-271319660811460139352501916644558975058261230836596652/5*y^2 - 3487807973304
-8511269299413306183851642254427026365686673888/5*y - 24783137893632185532697
-291886880720222932490781434136563942/5)*x^3 + (-3121825424585613564828729670
-704559492032765858876683224121119983801219547643890505070*y^3 - 221825947394
-9490736667831079912338956828105689590705243343986337391928943383709808005*y^
-2 + 160758704836112475349193472119432636971334139776148581364333958289434482
-806877560648970*y + 11422948792817280103973155128905463859737614171592664894
-6031483976252167029243247022480)*x^2 + (-16669299905353535600257292787491713
-9211874871730209960830468398970597547702137238176414705764356470658863661934
-844/5*y^3 - 1184461889159719050874128030327265957303943442428317536767347915
-50346393669679117451359918013807557809143042588696/5*y^2 + 85838722501598528
-5747916215688967734255013295070420507811819063217652588415080013500624247979
-7595396229858998666474/5*y + 60993980547811024600460123403224332648716008026
-91098946100231203424708988718659688581036467351459717869466864403491/5)*x + 
-(376194285951669846001777157888755029972864354842521262364492544230511805129
-9870709569967640457662697840860989973276516003636843449764721490044/5*y^3 + 
-2673104432455463952284352656647109245231103663592899118247897745294025980581
-570350460813923435311458682114748384710825808171997155877533243621/5*y^2 - 1
-9372161459591757660716692723884954611407620247350322071070721355639658608496
-4322202670927424345172110316287310450443586757567876756951302594424/5*y - 13
-7651773558650909762864388498297831958827163349141150095186154867116600261791
-580542516653158613689676015829782898702530873665348851222173825666/5)
-8
-x^3 + (-2138833799099964*y - 77766538091057475)*x + (-2899681696823107245657
-26*y - 10543044869724218021876124)
-9
-[x^3 + (-2138833799099964*y - 77766538091057475)*x + (-271454449233503516412
-931*y - 9869898621944137446807843), x^3 + (-2138833799099964*y - 77766538091
-057475)*x + (18513720448807208152795*y + 673146247780080575068281), x^3 + (-
-2138833799099964*y - 77766538091057475)*x + (-289968169682310724565726*y - 1
-0543044869724218021876124), x^3 - 3*x - 1]
-10
-x^5 - 10*x^3 + 20*x + 10
-11
-x^5 + (14433507922528796322450466885842559554649240/81*y^3 - 206924153900250
-190478940045819169994648120380/81*y^2 + 387221873734866129008668004845146809
-3411480/27*y + 9952907878012919545305461812329973812202320)*x^3 + (-15121374
-21515820547988557267937916762553254164737251785897692300/27*y^3 - 1833712123
-26689306422734140437601099700562333545199409203074500/27*y^2 + 1174316356518
-42472537762690188912056014010181849092684109181910170/9*y - 2779023158333254
-2847266778828385473838935385907433291290641467310)*x^2 + (-22669382693725437
-03014068118233450711618653187091810917531287989910268281950806313112830/81*y
-^3 + 23931520759808867888918058029953152459849943221887722693193767723007347
-651161135616414460/81*y^2 + 455747412921245095712869536099133208910135421131
-91870218073887288396098516272850951573480/27*y - 478507137409401566286931691
-5362187463934517274549880463316992141982057530013804207289130)*x + (-1192704
-8284399282613246663201058907524096925939278750837791530720153840255789136923
-463989511892271143598294/3*y^3 + 1529614757040263653471502031050559354814470
-20419907822345352843160917118838486063790065390094212607259586902/3*y^2 + 93
-9784803020100024772648421685762170647718661071334012435532754079055902917637
-80391464292290112011298779372*y - 405107454421416227846341371795184695887388
-553485545336064626090438935556037611475681610251702629961491235364)
-12
-x^5 + (-851144406868559279232996971324725873829107720800*y - 789318851387399
-1842317094186099932000353485209310)*x^3 + (-43598930311479787918633936768341
-9232691384674801616263923073114708639930*y - 4043198465203672254220234791146
-129167056215073195769930655328439910350350)*x^2 + (2194240445634978589987163
-697794653683158447798607957128524354188268092895134005397224513339544600*y +
- 203485487802052726938585350262826646331621060750721288241946679402110145465
-99006386469739888533585)*x + (4487271766922150403279065006331295700947106495
-64789965265088646961341003482440973587627263428493400548308062454501128034*y
- + 4161324645204494065844472460463583238903889997974154247351350815735235081
-291291583568531697548194392575994990027027850050)
-13
-x^2 + (579005994260871660725675138161827610313714425601379330908*y^5 - 10665
-838767241026781798972314566336490960682839047298886121*y^4 - 125451512411576
-00984519055919161910715239885311867631785451*y^3 - 1073834268336903398192739
-1139740391065234975927048788721099*y^2 - 14903158824521475429243429293262572
-511122641600774314257887*y - 14998783880299450494129067945527908842599620490
-145975145023)
-14
-x^2 + (-1/4*y^5 - 9/4*y^4 - 1/2*y^3 - 3/4*y^2 - 3/4*y + 3/2)
-15
-x^2 + (-53140587696485690121168112086566519*y^5 - 98157358121814711167092564
-297381805*y^4 - 1913471778408690519143587422326674*y^3 - 2075566936738425347
-3741951752946058*y^2 - 12577008858253013499052611584073889*y - 8328381136606
-8509872924242423547922)
-16
-x^2 + (8*y - 109)
-17
-x^2 - 5
-18
-x^3 + (29*y^3 - 156*y^2 - 403*y + 4767)*x + (-582335/6*y^3 + 840637/3*y^2 + 
-22819345/6*y - 72890309/3)
-19
-[x^3 - 3*x - 1]
-20
-x^3 - 3*x - 1
-[]
-Total time spent: 6980
